@startuml  DiagramaClasesDisenio

class RequestCertificateView<<Jframe>>{ 
    -button: Jbutton 
    -image: Jpanel
    -menubar
}  


class Menubar<<Jmenubar>>{
-button: Jbutton
-tittle: Jlabel
-icon: Jpanel
}


class RequestCertificateController{  
    -String certificateData 
    -Void writeData(userData) 
    -String getUserData(User) 
}

class User{ 
    -String name 
    -String lastName
    -String courseID 
    -String getCourseData(courseID) 
}  

class Certificate{ 
    -String nameStuden 
    -String nameProfessor 
    -String nameCourse 
    -String result  
    -Void write(data) 
}   

RequestCertificateView-->RequestCertificateController 
RequestCertificateView--Menubar
RequestCertificateController-->User 
RequestCertificateController------>Certificate 
User-- Certificate  

@enduml